--- a/src/style/portfolio-form.scss
+++ b/src/style/portfolio-form.scss
@@ -11,5 +11,30 @@
     .image-uploaders {
         @include base-grid();
         grid-template-columns: 200px 200px 200px;
+
+        .portfolio-manager-image-wrapper {
+            img {
+                width: 100%;
+                height: 120px;
+                object-fit: cover;
+                border-radius: 5px;
+            }
+
+            .image-removal-link {
+                display: flex;
+                justify-content: center;
+
+                a {
+                    font-size: 1.5em;                 
+                    cursor: pointer;
+                    transition: 0.5s ease-in-out;
+                    color: $grey;
+
+                    &:hover {
+                        color: $warning;
+                    }
+                }
+            }
+        }
     }
 }
